--- a/docs/vue-ebook/9.md
+++ b/docs/vue-ebook/9.md
@@ -247,9 +247,9 @@ export default {
 ```html
 <template>
   <form>
-    <div><a>姓名</a><input v-model="formInfo.name" /></div>
-    <div><a>手机号码</a><input type="tel" v-model="formInfo.phone" /></div>
-    <div><a>家庭地址</a><textarea v-model="formInfo.address"></textarea></div>
+    <div><a>姓名</a><input v-model="phoneInfo.name" /></div>
+    <div><a>手机号码</a><input type="tel" v-model="phoneInfo.phone" /></div>
+    <div><a>家庭地址</a><textarea v-model="phoneInfo.address"></textarea></div>
     <button @click="submit">提交</button>
   </form>
 </template>
@@ -258,7 +258,7 @@ export default {
     data() {
       return {
         // 表单内容信息
-        formInfo: {
+        phoneInfo: {
           name: "",
           phone: "",
           address: ""
